# Compsci-site

./: .replit  app.py  email.py  emailer.py  pyproject.toml  requirements.txt  text.py
static/: fadein.js  scroll.css  styles.css
templates/: base.html  how.html  index.html  pledge.html  what.html  why.html
